style: prevent card image distortion

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -13,9 +13,10 @@
 
 .imageArea img {
   width: 100%;
+  height: auto;
+  object-fit: cover;
   border-radius: 6px;
 }
-
 .placeholder {
   width: 100%;
   height: 150px;
